// Copyright (C) 2024 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gfxstream.host.snapshot;

// LINT.IfChange(virtio_gpu_ring_blob)
message VirtioGpuRingBlobSnapshot {
    uint32 id = 1;
    uint64 size = 2;
    uint64 alignment = 3;
    enum Type {
        TYPE_HOST_MEMORY = 0;
        TYPE_SHARED_MEMORY = 1;
    }
    Type type = 4;
    bytes memory = 5;
}
// LINT.ThenChange(VirtioGpuRingBlob.h:virtio_gpu_ring_blob)
